integrasi backend user(login dan signup) menggunakan supabase

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_TMDB_API_KEY=1dbc2493cdef811f9a80b585580a396b
+
+# Supabase Auth Configuration
+VITE_SUPABASE_URL=https://lwvacjvaundxdwpvzflj.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_JU24o6EfyLGelndH2qLmWQ_mZzP69sT
